<resources>
    <string name="s_project_name">Karya</string>
    <string name="s_no_internet_or_server_down">We are not able to reach our server. Please ensure you have internet turned on.</string>
    <string name="s_click_to_retry">Click this button to retry</string>
    <string name="s_unknown_error">Unknown error occurred. Please close the application and open again. If error persists, contact your project coordinator</string>
    <string name="s_salutation">Hi</string>
    <string name="s_show_app_in_language">Show the app in English</string>
    <string name="s_prompt_for_language_select">To show app in English, press here</string>
    <string name="s_fetching_values_for_language">Getting all necessary data to display the app in English</string>
    <string name="s_consent_form_title">Consent Form</string>
    <string name="s_access_code_title">Enter Access Code</string>
    <string name="s_otp_title">Enter OTP</string>
    <string name="s_phone_number_title">Enter Phone Number</string>
    <string name="s_age_title">Enter Year of Birth</string>
    <string name="s_gender_title">Select Gender</string>
    <string name="s_profile_pic_title">Select Profile Picture</string>
    <string name="s_dashboard_title">Dashboard</string>
    <string name="s_consent_form_agree">I agree</string>
    <string name="s_consent_form_disagree">No. I do not want to participate</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="re_enter_account_number">Re-enter Account Number</string>
    <string name="upi_id">UPI ID</string>
    <string name="re_enter_upi_id">Re-enter UPI ID</string>
    <string name="verification_loading">Checking account status, please wait.</string>
    <string name="payment_verification_did_not_receive">No, I did not receive Rs 2</string>
    <string name="payment_verification_received">Yes, I received Rs 2</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="register_again">Register Again</string>
    <string name="contact_project_coordinator">Contact Project Coordinator</string>
    <string name="payment_registration_failure_description">We were not able to register your account with the given details.</string>
    <string name="payment_registration_bank_description">Enter your account details to register your bank account.</string>
    <string name="payment_registration_bank_title">Register Bank Account</string>
    <string name="payment_registration_upi_title">Register UPI ID</string>
    <string name="payment_registration_upi_description">Enter your account details to register your UPI id.</string>
    <string name="payment_verification_title">Account Verification</string>
</resources>